Fixed a bug: GPS measurements were not being streamed over USB to the Compute Node. They are streamed now.

--- a/readMe.html
+++ b/readMe.html
@@ -687,6 +687,9 @@ tr:nth-child(even){background-color: #f2f2f2}
             Return, from the Android app to the remote control script, the result of processing commands.
         </li>
         <li>
+            Publish measurements from the Android app to the cloud or a publicly accessible web-server for users to view.
+        </li>
+        <li>
             Support iPhone.
         </li>
         <li>
